update from Ramu

--- a/OracleJETApplication-V-2/views/labor-management/dialogwindow/employee-basicinfo-modal-large.html
+++ b/OracleJETApplication-V-2/views/labor-management/dialogwindow/employee-basicinfo-modal-large.html
@@ -18,13 +18,6 @@
         </div>
     </div>
     <div class="oj-dialog-body">
-<!--                <div class="oj-flex">
-                <div class="alertMsgWrap oj-flex-item">
-                     <div class="alertMsgText">
-                         <i class="fa fa-check"></i> Order i15-02095 has been successfully submitted
-                     </div>
-                 </div>-->
-
         <div class="oj-flex">
             <div class="oj-flex-item">
                 <div class="oj-flex oj-flex-items-pad oj-sm-flex-items-1">
@@ -65,7 +58,7 @@
                         <br /><span id="clockedin" data-bind="text: $parent.basicEmpInfo().homeStore"></span>
 
                         <br />
-                        <br /><a href="#">view all employees <i class="fa fa-arrow-circle-right"></i></a>
+                        <!--<br /><a href="#">view all employees <i class="fa fa-arrow-circle-right"></i></a>-->
                     </div>
                     <div class="oj-flex-item">
                         <label for="availability">AVAILABILITY (Days &amp; Time)</label>
