--- a/OracleJETApplication-V-2/views/labor-management/dialogwindow/employee-basicinfo-modal-small.html
+++ b/OracleJETApplication-V-2/views/labor-management/dialogwindow/employee-basicinfo-modal-small.html
@@ -64,7 +64,7 @@
                 <br /><span id="clockedin" class="txtHighlight" data-bind="text: $parent.basicEmpInfo().homeStore"></span>
 
                 <br />
-                <br /><a href="#">view all employees <i class="fa fa-arrow-circle-right"></i></a>
+<!--                <br /><a href="#">view all employees <i class="fa fa-arrow-circle-right"></i></a>-->
             </div>
         </div>
         <hr>
