--- a/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-small.html
+++ b/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-small.html
@@ -40,10 +40,10 @@
                     </div>
                 </div>
             </div>
-        <hr>
+        
         <div class="oj-flex empContactInfo">
             <div class="oj-flex-item">
-                <label for="contact">CONTACT</label>
+              <hr>  <label for="contact">CONTACT</label>
                 <br /><span id="contact" class="txtHighlight" data-bind="text: basicEmpInfo().mobile + ' mobile' "></span>
                 <br /><span id="contact" class="txtHighlight" data-bind="text: basicEmpInfo().email + ' email' "></span>
             </div>
@@ -64,7 +64,7 @@
                 <br /><span id="clockedin" class="txtHighlight" data-bind="text: basicEmpInfo().homeStore"></span>
 
                 <br />
-                <br /><a href="#">view all employees <i class="fa fa-arrow-circle-right"></i></a>
+<!--                <br /><a href="#">view all employees <i class="fa fa-arrow-circle-right"></i></a>-->
             </div>
         </div>
         <hr>
